<resources>
    <!--main DrawerLayout-->
    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>
    <string name="press_again_exit">再按一次退出</string>
    <!--toolbar menu string -->
    <string name="light_switch">开关</string>
    <string name="search">搜索</string>
    <!--nav menu string-->
    <string name="home">主页</string>
    <string name="collection">精选</string>
    <string name="download">下载</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="quit">登出</string>
    <!--tab title string-->
    <string name="square">广场</string>
    <string name="recommend">推荐</string>
    <string name="filter">滤镜</string>
    <!--login & register-->
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="repeat_password">确认密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="already_login">请勿重复登录</string>
    <string name="sign_in_success">登录成功</string>
    <string name="error_username">无效的用户名</string>
    <string name="confirm_pwd_error">两次密码不一致</string>
    <string name="error_pwd">密码不得为空</string>
    <string name="forgot_your_password">忘记密码?</string>
    <string name="none_account">当前未登录账号</string>
    <string name="already_log_out">已退出当前账号</string>
    <string name="sign_in_failed">登录失败</string>
    <string name="wrong_in_name_or_pwd">用户名或密码错误</string>
    <string name="register_failed">注册失败</string>
    <string name="already_register">账户已存在，请登录</string>
    <!--home square-->
    <string name="untitled">未标题</string>
    <string name="like">喜欢</string>
    <string name="send">发送</string>
    <string name="type_here">请输入</string>
    <string name="publish_to">发布</string>
    <!--home recommend-->
    <string name="download_finish">下载完成</string>
    <string name="already_download">已下载</string>
    <string name="load_success">加载完成</string>
    <string name="refresh_failed">刷新失败</string>
    <string name="recommend_list_error">推荐列表加载失败，请重试</string>
    <!--home filter-->
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="original_image">原图</string>
    <string name="sunshine">午后暖阳</string>
    <string name="twilight">暮色</string>
    <string name="candy_town">糖果小镇</string>
    <string name="engraving_art">版画艺术</string>
    <string name="oil_painting">复古油画</string>
    <string name="golden_time">金色时光</string>
    <string name="nature">自然</string>
    <string name="ocean_heart">海洋之心</string>
    <string name="old_photo">旧相片</string>
    <string name="wave">波浪</string>
    <string name="cubist">立体主义</string>
    <string name="feathers">纷飞羽毛</string>
    <string name="mosaic">马赛克</string>
    <string name="starry_night">星月夜</string>
    <string name="please_grant_permission">请授予所需权限</string>
    <string name="please_login_first">请登录后使用</string>
    <string name="members_only">本滤镜由会员专享</string>
    <string name="event_description">详情</string>
    <string name="event_description_text">在广场发布图片参与活动，我们将评选出最符合活动主题的图片，赠送丰厚奖金！</string>
    <string name="event_spring_story">春日物语</string>
    <string name="event_food_spree">美食狂欢节</string>
    <string name="event_succulent">多肉联萌</string>
    <string name="filter_list_error">滤镜列表加载失败，请稍后重试</string>
    <!--download-->
    <string name="refresh">刷新</string>
    <string name="refresh_success">刷新成功</string>
    <string name="confirm_deletion">确认删除？</string>
    <string name="delete_success">删除成功</string>
    <string name="attention_Text">注意：将删除图片文件，此次操作不可逆</string>
    <!--setting-->
    <string name="language">语言</string>
    <string name="theme">主题</string>
    <string name="start_page">默认启动页</string>
    <string name="clear_pic_cache">清理图片缓存</string>
    <string name="light_theme">浅色主题</string>
    <string name="dark_theme">深色主题</string>
    <string name="auto_language">跟随系统</string>
    <string name="en_us">英语(美国)</string>
    <string name="zh_cn">简体中文(中国)</string>
    <string name="clear_success">清理成功</string>
    <!--about -->
    <string name="app_name">Photo Valley</string>
    <string name="app_develop_date">2018</string>
    <string name="version">版本</string>
    <string name="version_code">1.1.2</string>
    <string name="author">开发者</string>
    <string name="author_name">VanXNF</string>
    <string name="author_place">中国</string>
    <string name="follow_on_git_hub">在GitHub上关注我</string>
    <string name="email">邮箱</string>
    <string name="email_address">PhotoValley@163.com</string>
    <string name="share_feedback">分享 &amp; 反馈</string>
    <string name="share_to_your_friends">分享给朋友</string>
    <string name="rate_or_comment_in_market">去应用商店评分</string>
    <string name="feedback">反馈</string>
    <!--preview-->
    <string name="load_failed">加载失败</string>
    <string name="save_success">保存成功</string>
    <string name="already_saved">图片已保存</string>
    <string name="share_to">分享到</string>
    <string name="pic_not_load">图片未加载</string>
    <!--subscribe-->
    <string name="subscribe">订阅我们</string>
    <string name="subscribe_for">将获得 高清图片处理 和 移除广告</string>
    <string name="subscribe_success">订阅成功</string>
    <string name="per_month">每月</string>
    <string name="per_quarter">每季度</string>
    <string name="per_year">每年</string>
    <string name="per_month_pay">￥10</string>
    <string name="per_quarter_pay">￥28</string>
    <string name="per_year_pay">￥110</string>
    <!--photo picker-->
    <string name="gallery">图库</string>
    <string name="all_photo_dir_name">全部相片</string>
    <string name="please_select_at_least_one_picture">没有选择任何图片,请至少选择一张图片</string>
    <string name="open_camera_fail">打开相机失败</string>
    <string name="photo_save_fail">相片存储失败,请尝试其它相机功能APP进行拍照</string>
    <string name="max_options">已达到最大选择数量</string>
    <!--publish page-->
    <string name="please_choose_photo">请选择一张图片</string>
    <string name="follower">通知关注者</string>
    <string name="direct">直接发布</string>
    <string name="add_to_photo_map">加入图片集</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_failed">发布失败</string>
</resources>
