<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        app:cardBackgroundColor="?attr/colorPrimaryDark"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="?attr/colorAccent">

                <com.vanxnf.photovalley.widget.CircleImageView.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:elevation="5dp"
                    android:src="@drawable/pic4"
                    app:border_color="?attr/colorAccent"
                    app:border_width="0dp" />

            </RelativeLayout>

            <com.vanxnf.photovalley.widget.TextEdit.TextFieldBoxes
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:counterTextColor="?attr/colorAccentLight"
                app:hasClearButton="true"
                app:labelText="@string/account"
                app:maxCharacters="10"
                app:primaryColor="?attr/colorAccent"
                app:secondaryColor="@color/grey">

                <com.vanxnf.photovalley.widget.TextEdit.ExtendedEditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorAccent" />

            </com.vanxnf.photovalley.widget.TextEdit.TextFieldBoxes>

            <com.vanxnf.photovalley.widget.TextEdit.TextFieldBoxes
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:counterTextColor="?attr/colorAccentLight"
                app:hasClearButton="true"
                app:labelText="@string/password"
                app:maxCharacters="10"
                app:primaryColor="?attr/colorAccent"
                app:secondaryColor="?attr/colorAccentLight">

                <com.vanxnf.photovalley.widget.TextEdit.ExtendedEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorAccent" />

            </com.vanxnf.photovalley.widget.TextEdit.TextFieldBoxes>

            <com.vanxnf.photovalley.widget.TextEdit.TextFieldBoxes
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:counterTextColor="?attr/colorAccentLight"
                app:hasClearButton="true"
                app:labelText="@string/repeat_password"
                app:maxCharacters="10"
                app:primaryColor="?attr/colorAccent"
                app:secondaryColor="?attr/colorAccentLight">

                <com.vanxnf.photovalley.widget.TextEdit.ExtendedEditText
                    android:id="@+id/et_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorAccent" />

            </com.vanxnf.photovalley.widget.TextEdit.TextFieldBoxes>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.vanxnf.photovalley.widget.SubmitButton.SubmitButton
                    android:id="@+id/btn_register"
                    android:layout_width="160dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="10dp"
                    app:buttonColor="?attr/colorAccent"
                    app:buttonText="@string/register"
                    app:buttonTextSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>
